# safe-harbor

./: .gitignore  .gitmodules  LICENSE.md  README.md  aderyn.toml  deployment-info.json  new-owner-keypair.json
documents/: .gitignore  FAQ.md  agreement.md  agreement.tex  deployment.txt  summary.tex
js/: README.md  domain.js  fs.js  getHistoricalAdopters.js  main.js  package-lock.json  package.json  setup.sh  test.sh  types.js
legacy/: README.md
registry-contracts/: .gas-snapshot  README.md  adopt.md  agreementDetails.json  agreementDetails.md  agreementDetailsV2.json  check_adoption_details_v2.py  deployments.toml  foundry.toml
registry-contracts-solana/: Anchor.toml  LICENSE  README.md  package.json
registry-contracts-solana/programs/safe_harbor_v2/: Cargo.toml
registry-contracts-solana/programs/safe_harbor_v2/src/: error.rs  event.rs  lib.rs
registry-contracts-solana/programs/safe_harbor_v2/src/instructions/: agreement_instructions.rs  mod.rs  registry_instructions.rs
registry-contracts-solana/programs/safe_harbor_v2/src/state/: agreement_state.rs  mod.rs  registry_state.rs
solana-programs/: .env.devnet  .env.testnet  .gitignore  Anchor.toml  Cargo.toml  EVM_MIGRATION_GUIDE.md  README.md  TRANSACTION_SIZE_GUIDE.md  agreement-data-sample.json  agreement-details.json  deploy-testnet.sh  deployment-info.json  import-simple.sh  package.json  simple-adopt.js  tsconfig.json
solana-programs/programs/safe_harbor/: Cargo.toml
solana-programs/programs/safe_harbor/src/: contexts.rs  errors.rs  events.rs  helpers.rs  instructions.rs  lib.rs  state.rs  types.rs
test-ledger/: faucet-keypair.json
(+140 files in other folders)
